<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".FirstActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/road"
            android:textSize="20sp"
            android:layout_marginStart="5dp"/>
        <EditText
            android:id="@+id/roadTextbox"
            android:layout_width="150dp"
            android:hint="@string/road_hint"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="number"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/start"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/startTextbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/start_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/startTextbox2"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:hint="@string/start_hint2"
            android:layout_marginStart="5dp"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/link"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/linkTextbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/linkhint"
            android:layout_marginStart="13dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/end"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:hint="@string/endhint"
            android:inputType="text" />

        <EditText
            android:id="@+id/endtext2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/endhint2"
            android:layout_marginStart="5dp"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/SubLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sub_link"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sublink_spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:entries="@array/sublink_options1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/corridor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/corridor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/corridortextbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/region"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/regiontextbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/regionhint"
            android:layout_marginStart="20dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/shoulderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/shoulder_type"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/shoulderTypetextbox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/shoulder_type_hint"
            android:layout_marginStart="10dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/next"
            android:drawableEnd="@drawable/arrow_right_circle_outline" />
        <Button
            android:id="@+id/see_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Survey"/>
    </LinearLayout>

</LinearLayout>